@@ -30,11 +30,11 @@ if not exist openssl-1.0.1e (
 )
 
 @rem tcl/tk
-if not exist tcl-8.5.11.0 (
+if not exist tcl-8.5.15.0 (
    rd /s/q tcltk tcltk64
-   svn export http://svn.python.org/projects/external/tcl-8.5.11.0
+   svn export http://svn.python.org/projects/external/tcl-8.5.15.0
 )
-if not exist tk-8.5.11.0 svn export http://svn.python.org/projects/external/tk-8.5.11.0
+if not exist tk-8.5.15.0 svn export http://svn.python.org/projects/external/tk-8.5.15.0
 
 @rem sqlite3
 if not exist sqlite-3.7.12 (
